--- a/SomarTexto/SomarTexto.csproj
+++ b/SomarTexto/SomarTexto.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SomarTexto</RootNamespace>
-    <AssemblyName>SomarTexto</AssemblyName>
+    <AssemblyName>SomarTexto%28ST%29</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
